# cuPRN

./: CMakeLists.txt  README.md  cuprn.cu  memory.cuh  sequence.cu  sequence.h  vector.cu  vector.cuh
